# MatrixFlanger

./: .gitignore  BUILD-COMPLETE.md  BUILD-REPORT.md  BUILD.md  CMakeLists.txt  FORMATS.md  QUICKSTART.md  README-SUITE.md  README.md  build-all.sh  build-linux.sh  build-macos.sh  build-vst3.sh  build-windows.bat  flark-logo-integration.md  validate.sh
include/: dsp.h  gui.h
lv2/: CMakeLists.txt  flark-matrixfilter-ui.ttl  flark-matrixfilter.ttl  manifest.ttl  matrixfilter-lv2.cpp  matrixfilter-ui-lv2.cpp
src/: dsp.cpp  gui.cpp  plugin-extensions.cpp  plugin.cpp  symbols-windows.txt  symbols.map
vst3/: CMakeLists.txt  controller.cpp  editcontroller.cpp  plugin.cpp  processor.cpp  vst3plugin.cpp
